--- a/Ana-Dosya/Menu.html
+++ b/Ana-Dosya/Menu.html
@@ -290,25 +290,25 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 <div id="buttons-list">
 <!--- Application sections --->
 <button onclick="window.open('1-PlayerLer/Player-Menu.html')">
-<img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<img src="https://od.lk/s/OTFfMzE2MzU3NzRf/screen-0.jpg" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
 <h2>1-Player</h2>
 </button>
 
 
 <button onclick="window.open('2-Youtube-Ply-Ulusal/Yout-Menu.html')">
-<img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<img src="https://od.lk/s/OTFfMzE2MzU3ODdf/Youtub.jpg" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
 <h2>2-Youtube</h2>
 </button>
 
 <button onclick="window.open('11-Radyo/Menu.html')">
-<img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<img src="https://od.lk/s/OTFfMzE2MzU4MDNf/Radyo.jpg" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
 <h2>11-Radyo</h2>
 </button>
 
 
 
 <button onclick="window.open('20-Test-Sayfasi/Test-Menu.html')">
-<img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<img src="https://od.lk/s/OTFfMzE2MzU4MzBf/TestSayfam.jpg" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
 <h2>20-TestSayfa</h2>
 </button>
 
@@ -333,8 +333,23 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 
 
 
+
+
+
+
+
+
+
+
+
+<button onclick="window.open('../10-Website-Indir/index.html')">
+<img src="https://od.lk/s/OTFfMjk2NTEyNjRf/Indir-removebg-preview.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>Indir Apk</h2>
+</button>
+
+
 <button onclick="window.open('10000-XXX/index.html')">
-<img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<img src="https://od.lk/s/OTFfMzE0ODk1MjRf/27.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
 <h2>XXX</h2>
 </button>
 
