--- a/Ana-Dosya/1-PlayerLer/Player-Menu.html
+++ b/Ana-Dosya/1-PlayerLer/Player-Menu.html
@@ -324,7 +324,7 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 
 <button onclick="window.open('6-Ulusal-Izle/index.html')">
 <img src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>6-Ulusal</h2>
+<h2>6-Ulusal-Izle</h2>
 </button>
 
 <button onclick="window.open('7.0-Ply-Yandan/index.html')">
