--- a/Ana-Dosya/2-Youtube-Ply-Ulusal/1-Youtube-Ply-1/index.html
+++ b/Ana-Dosya/2-Youtube-Ply-Ulusal/1-Youtube-Ply-1/index.html
@@ -29,10 +29,20 @@
   </div>
   <ul class="video-list mobile-list hide">
     <li class="active-video" data-url="https://www.youtube.com/embed/82O6yOy_XwE">Star Tv</li>
+    <li class="active-video" data-url="https://www.youtube.com/embed/ouuCjEjyKVIE">Show Tv</li>
+
     <li data-url="https://www.youtube.com/embed/gIdaTOTzZuw">Atv</li>
     <li data-url="https://www.youtube.com/embed/k6kyt0z40Fg">Cnn</li>
     <li data-url="https://www.youtube.com/embed/6BX-NUzBSp8">Haber Global</li>
     <li data-url="https://www.youtube.com/embed/erCmQucF6_U">A haber </li>
+    <li data-url="https://www.youtube.com/embed/TYG2rsoQBkw">A haber </li>
+
+
+    <li data-url="https://www.youtube.com/embed/BYEXMH5hFdg">Diriliş Ertuğrul</li>
+    <li data-url="https://www.youtube.com/embed/88foZu85J04">Kurulus Osman</li>
+    <li data-url="https://www.youtube.com/embed/6_AnQrbFvY8">Fetihler Sultanı</li>
+
+
     <li data-url="https://www.youtube.com/embed/5tud4XFxuIY">Müge Anli Canli</li>
     <li data-url="https://www.youtube.com/embed/hQXmZUpN0eY">Esra Erol Canli</li>
     <li data-url="https://www.youtube.com/embed/hfx8H7YrmTw">Kemal Sunal</li>
