--- a/Ana-Dosya/2-Youtube-Ply-Ulusal/Yout-Menu.html
+++ b/Ana-Dosya/2-Youtube-Ply-Ulusal/Yout-Menu.html
@@ -295,10 +295,37 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 </button>
 
 
+<button onclick="window.open('1-Ytb-Muzik/Player-Menu.html')">
+<img src="https://od.lk/s/OTFfMzE1MTE0NjZf/1-Youtube.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>1-Ytb-Muzik</h2>
+</button>
+
+<button onclick="window.open('2.0-Ytb-Muzik/Player-Menu.html')">
+<img src="https://od.lk/s/OTFfMzE1MTE0NjZf/1-Youtube.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>2.0-Ytb-Muzik</h2>
+</button>
+
 <button onclick="window.open('2-Yout-Muzik-Ply/Player-Menu.html')">
 <img src="https://od.lk/s/OTFfMzE1MTE0NjZf/1-Youtube.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
 <h2>2-Yout-Muzik</h2>
 </button>
+
+<button onclick="window.open('2-Ytb-Muzik/Player-Menu.html')">
+<img src="https://od.lk/s/OTFfMzE1MTE0NjZf/1-Youtube.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>2-Ytb-Muzik</h2>
+</button>
+
+<button onclick="window.open('3-Zeynep-Simsek/Player-Menu.html')">
+<img src="https://od.lk/s/OTFfMzE1MTE0NjZf/1-Youtube.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>3-Zeynep-Simsek</h2>
+</button>
+
+
+
+
+
+
+
 
 
 
