--- a/Ana-Dosya/20-Test-Sayfasi/4-Player-Menu/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/4-Player-Menu/index.html
@@ -28,9 +28,7 @@
 <script src="jwplayer.js"></script>
 <body>
 
-  <div class="header">
-   OTT PLAY 
-  </div>
+
 <script src="https://content.jwplatform.com/libraries/SAHhwvZq.js"></script>
 
 <div id="jwplayerDiv"></div>
@@ -41,7 +39,7 @@
 
 <!-- Add buttons or elements to trigger the switches -->
   <div class="button-container">
-      <button class="custom-button" onclick="switchToOtherStream1()">250MB</button>
+      <button class="custom-button" onclick="switchToOtherStream1()">Atv</button>
      <button class="custom-button" onclick="switchToOtherStream2()">400MB</button>
     <button class="custom-button" onclick="switchToOtherStream3()">700MB</button>
     <button class="custom-button" onclick="switchToOtherStream4()">1.49GB</button>
@@ -51,8 +49,8 @@
   </div>
   
   <div style="background-color: #0074d9; text-align: center; padding: 10px;">
-    <a href="https://t.me/kannad_OTTPLAY" target="_blank">
-      <button id="joinTelegramButton" style="background-color: #fff; color: #0074d9; border: 2px solid #0074d9; padding: 5px 10px;">Join Telegram</button>
+    <a href="https://turis-tv.github.io/Turis-2025/Ana-Dosya/Menu.html" target="_blank">
+      <button id="joinTelegramButton" style="background-color: #fff; color: #0074d9; border: 2px solid #0074d9; padding: 5px 10px;">Ana Sayfa</button>
     </a>
   </div>
 </body>
