--- a/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
+++ b/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
@@ -309,7 +309,10 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 <h2>4-Player-Menu</h2>
 </button>
 
-
+<button onclick="window.open('5-Player-Menu/index.html')">
+<img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>5-Player-Menu</h2>
+</button>
 
 
 
