--- a/Ana-Dosya/20-Test-Sayfasi/7-Player/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/7-Player/index.html
@@ -9,7 +9,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="container">
-  <div class="channel-list" id="channelList">Channels:
+  <div class="channel-list" id="channelList">Kanallar :
     <div id="loading">Loading available channels...</div>
   </div>
   <div class="player-container">
