--- a/Ana-Dosya/1-PlayerLer/Player-Menu.html
+++ b/Ana-Dosya/1-PlayerLer/Player-Menu.html
@@ -300,6 +300,13 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 <h2>2-Player</h2>
 </button>
 
+
+<button onclick="window.open('1.0-Player-Usten-Acilan/index.html')">
+<img src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>1.0-Usten-Acilan</h2>
+</button>
+
+
 <button onclick="window.open('3.0-Ulusal-Tele/index.html')">
 <img src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
 <h2>3.0-Player</h2>
@@ -338,7 +345,10 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 </button>
 
 
-
+<button onclick="window.open('https://www.elahmad.com/tv/canli-tv-live.php')">
+<img src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>8-iptv</h2>
+</button>
 
 
 
