--- a/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
+++ b/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
@@ -324,6 +324,10 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 <h2>7-Player-Menu</h2>
 </button>
 
+<button onclick="window.open('8-Yt-Player/index.html')">
+<img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>8-Yt-Player</h2>
+</button>
 
 
 
