--- a/Ana-Dosya/1-PlayerLer/Player-Menu.html
+++ b/Ana-Dosya/1-PlayerLer/Player-Menu.html
@@ -351,6 +351,10 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 </button>
 
 
+<button onclick="window.open('8.1-Player/index.html')">
+<img src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>8.1-Player</h2>
+</button>
 
 
 
