--- a/Ana-Dosya/1-PlayerLer/Player-Menu.html
+++ b/Ana-Dosya/1-PlayerLer/Player-Menu.html
@@ -357,8 +357,10 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 </button>
 
 
-
-
+<button onclick="window.open('https://tv.mobiltv.net/trt1-canliyayin')">
+<img src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>9-ulusal</h2>
+</button>
 </div>
 
 <script>
