--- a/Ana-Dosya/1-PlayerLer/Player-Menu.html
+++ b/Ana-Dosya/1-PlayerLer/Player-Menu.html
@@ -363,6 +363,20 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 </button>
 </div>
 
+<button onclick="window.open('10.0-Player/index.html')">
+<img src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>10-ulusal</h2>
+</button>
+</div>
+
+
+
+
+
+
+
+
+
 <script>
 function openNav() {
 document.getElementById("mySidenav").style.width = "250px";
