--- a/Ana-Dosya/1-PlayerLer/Player-Menu.html
+++ b/Ana-Dosya/1-PlayerLer/Player-Menu.html
@@ -365,10 +365,15 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 
 <button onclick="window.open('10.0-Player/index.html')">
 <img src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>10-ulusal</h2>
+<h2>10-ulusal-1</h2>
 </button>
 </div>
 
+<button onclick="window.open('10.1-Player/index.html')">
+<img src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<h2>11-ulusal-2</h2>
+</button>
+</div>
 
 
 
