--- a/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/index.html
@@ -16,21 +16,21 @@
 <h1>IPTV App</h1></header><!-- Navigation Bar --><nav><ul><li>
 <a href="#">Live BEIN TV</a></li><li><a href="#"></a></li></ul>
 </nav><!-- Content Area --><section id="content"><!-- Channel List -->
-<div id="channel-list"><div class="channel" data-url="http://hw1.jemtv.com/app/akittv/playlist.m3u8">
+<div id="channel-list"><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 1"><p>beIN Sports 1</p>
-</div><div class="channel" data-url="http://hw1.jemtv.com/app/cnnturk/playlist.m3u8">
+</div><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 2">
-<p>beIN Sports 2</p></div><div class="channel" data-url="https://tgn.bozztv.com/trn03/gt-atv-tv/tracks-v1a1/mono.m3u8">
+<p>beIN Sports 2</p></div><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 3"><p>beIN Sports 3</p>
-</div><div class="channel" data-url="https://tgn.bozztv.com/trn03/gt-foxturktv/tracks-v1a1/mono.m3u8">
+</div><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 4">
-<p>beIN Sports 4</p></div><div class="channel" data-url="https://trn03.tulix.tv/gt-kanal7/index.m3u8">
+<p>beIN Sports 4</p></div><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 5"><p>beIN Sports 5</p>
-</div><div class="channel" data-url="https://tgn.bozztv.com/trn03/gt-show-tv/tracks-v1a1/mono.m3u8">
+</div><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 6">
-<p>beIN Sports 6</p></div><div class="channel" data-url="https://trn03.tulix.tv/gt-startv/index.m3u8">
+<p>beIN Sports 6</p></div><div class="channel" data-url="http://hw1.jemtv.com/app/akittv/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 7">
-<p>beIN Sports 7</p></div><div class="channel" data-url="https://tgn.bozztv.com/dvrfl05/gin-trt1eu/tracks-v1a1/mono.m3u8">
+<p>beIN Sports 7</p></div><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 8"><p>beIN Sports 8</p>
 </div><div class="channel" data-url="http://173.212.193.243:8080/mo3adb356Ds/mo3adb356Ds/894">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 9">
