--- a/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/index.html
@@ -16,23 +16,23 @@
 <h1>IPTV App</h1></header><!-- Navigation Bar --><nav><ul><li>
 <a href="#">Live BEIN TV</a></li><li><a href="#"></a></li></ul>
 </nav><!-- Content Area --><section id="content"><!-- Channel List -->
-<div id="channel-list"><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
+<div id="channel-list"><div class="channel" data-url="yayin2.canlitv.fun/livetv/tv8.stream/master.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 1"><p>beIN Sports 1</p>
-</div><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
+</div><div class="channel" data-url="tgn.bozztv.com/trn03/gt-atv-tv/tracks-v1a1/mono.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 2">
 <p>beIN Sports 2</p></div><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 3"><p>beIN Sports 3</p>
-</div><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
+</div><div class="channel" data-url="hw1.jemtv.com/app/FoxTurkey/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 4">
-<p>beIN Sports 4</p></div><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
+<p>beIN Sports 4</p></div><div class="channel" data-url="hw1.jemtv.com/app/Kanal7/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 5"><p>beIN Sports 5</p>
-</div><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
+</div><div class="channel" data-url="trn03.tulix.tv/gt-kanald/index.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 6">
-<p>beIN Sports 6</p></div><div class="channel" data-url="http://hw1.jemtv.com/app/akittv/playlist.m3u8">
+<p>beIN Sports 6</p></div><div class="channel" data-url="hw1.jemtv.com/app/ShowTV/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 7">
-<p>beIN Sports 7</p></div><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
+<p>beIN Sports 7</p></div><div class="channel" data-url="hw1.jemtv.com/app/StarTV/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 8"><p>beIN Sports 8</p>
-</div><div class="channel" data-url="http://173.212.193.243:8080/mo3adb356Ds/mo3adb356Ds/894">
+</div><div class="channel" data-url="hw1.jemtv.com/app/trt1/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 9">
 <p>beIN Sports 9</p></div></div></section><!-- Footer --><footer><p>&copy; 2025 IPTV Turis Tv App. All rights reserved.</p>
 </footer></div><!-- Link to JavaScript --><script src="app.js"></script></body></html>
