--- a/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/index.html
@@ -11,30 +11,268 @@
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>IPTV App</title><link rel="stylesheet" href="styles.css"></head><body><!-- Splash Screen -->
-<div id="splash-screen"><h1>Welcome to IPTV</h1></div><!-- Main App Layout -->
+<div id="splash-screen"><h1>Turis Tv IPTV</h1></div><!-- Main App Layout -->
 <div id="app-container" style="display: none;"><!-- Header --><header>
 <h1>IPTV App</h1></header><!-- Navigation Bar --><nav><ul><li>
-<a href="#">Live BEIN TV</a></li><li><a href="#"></a></li></ul>
+<a href="#">OpPlayer</a>
+<a href="#">Ulusal</a>
+<a href="#">Haberler</a>
+<a href="#">Belgesel</a>
+<a href="#">Muzik</a></li><li><a href="#"></a></li></ul>
 </nav><!-- Content Area --><section id="content"><!-- Channel List -->
+
+
 <div id="channel-list"><div class="channel" data-url="yayin2.canlitv.fun/livetv/tv8.stream/master.m3u8">
-<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 1"><p>beIN Sports 1</p>
+<img src="https://i.ibb.co/Bt6frts/trthaber.png" alt="beIN Sports 1">
+<p>Trt Haber</p>
 </div><div class="channel" data-url="tgn.bozztv.com/trn03/gt-atv-tv/tracks-v1a1/mono.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 2">
-<p>beIN Sports 2</p></div><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
-<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 3"><p>beIN Sports 3</p>
+<p>beIN Sports 2</p>
+</div><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 3">
+<p>beIN Sports 3</p>
 </div><div class="channel" data-url="hw1.jemtv.com/app/FoxTurkey/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 4">
-<p>beIN Sports 4</p></div><div class="channel" data-url="hw1.jemtv.com/app/Kanal7/playlist.m3u8">
-<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 5"><p>beIN Sports 5</p>
+<p>beIN Sports 4</p>
+</div><div class="channel" data-url="hw1.jemtv.com/app/Kanal7/playlist.m3u8">
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 5">
+<p>beIN Sports 5</p>
 </div><div class="channel" data-url="trn03.tulix.tv/gt-kanald/index.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 6">
 <p>beIN Sports 6</p></div><div class="channel" data-url="hw1.jemtv.com/app/ShowTV/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 7">
-<p>beIN Sports 7</p></div><div class="channel" data-url="hw1.jemtv.com/app/StarTV/playlist.m3u8">
-<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 8"><p>beIN Sports 8</p>
+<p>beIN Sports 7</p>
+</div><div class="channel" data-url="hw1.jemtv.com/app/StarTV/playlist.m3u8">
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 8">
+<p>beIN Sports 8</p>
 </div><div class="channel" data-url="hw1.jemtv.com/app/trt1/playlist.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 9">
-<p>beIN Sports 9</p></div></div></section><!-- Footer --><footer><p>&copy; 2025 IPTV Turis Tv App. All rights reserved.</p>
+<p>beIN Sports 9</p>
+
+
+
+</div><div class="channel" data-url="hw1.jemtv.com/app/trt1/playlist.m3u8">
+<img src="https://i.ibb.co/Bt6frts/trthaber.png" alt="TRT HABER">
+<p>TRT HABER</p>
+
+
+</div><div class="channel" data-url="tv-trthaber.medya.trt.com.tr/master.m3u8">
+<img src="https://i.ibb.co/Bt6frts/trthaber.png" alt="TRT HABER">
+<p>TRT HABER</p>
+
+</div><div class="channel" data-url="ensonhaber-live.ercdn.net/trthaber/trthaber.m3u8">
+<img src="https://i.ibb.co/Bt6frts/trthaber.png" alt="TRT HABER">
+<p>TRT HABER</p>
+
+</div><div class="channel" data-url="ciner-live.daioncdn.net/haberturktv/haberturktv.m3u8">
+<img src="https://i.ibb.co/Bt6frts/trthaber.png" alt="TRT HABER">
+<p>TRT HABER</p>
+
+</div><div class="channel" data-url="ensonhaber-live.ercdn.net/haberturk/haberturk.m3u8">
+<img src="https://i.ibb.co/Bt6frts/trthaber.png" alt="TRT HABER">
+<p>TRT HABER</p>
+
+</div><div class="channel" data-url="haberglobal.blutv.com/blutv_haberglobal2/live.m3u8">
+<img src="https://i.ibb.co/k58p7P2/hglobal.png" alt="HABER GLOBAL">
+<p>HABER GLOBAL</p>
+
+</div><div class="channel" data-url="raw.githubusercontent.com/ipstreet312/freeiptv/master/ressources/dmotion/py/hglobal/hglobal.m3u8">
+<img src="https://i.ibb.co/k58p7P2/hglobal.png" alt="HABER GLOBAL">
+<p>HABER GLOBAL</p>
+
+</div><div class="channel" data-url="tv100.blutv.com/blutv_tv100_live/live.m3u8">
+<img src="https://i.ibb.co/bLpTdYZ/tv100.png" alt="TV 100">
+<p>TV 100</p>
+
+</div><div class="channel" data-url="helga.iptv2022.com/tv_100/index.m3u8">
+<img src="https://i.ibb.co/bLpTdYZ/tv100.png" alt="TV 100">
+<p>TV 100</p>
+
+</div><div class="channel" data-url="ie.sonyrepairs.com/cnn/index.m3u8">
+<img src="https://i.ibb.co/JqWCczW/cnnturk1.png" alt="CNN TÜRK">
+<p>CNN TÜRK</p>
+
+</div><div class="channel" data-url="hw1.jemtv.com/app/cnnturk/playlist.m3u8">
+<img src="https://i.ibb.co/JqWCczW/cnnturk1.png" alt="CNN TÜRK">
+<p>CNN TÜRK</p>
+
+</div><div class="channel" data-url="hw1.jemtv.com/app/NTVTurkey/playlist.m3u8">
+<img src="https://i.ibb.co/9c7MvWX/ntv.png" alt="NTV">
+<p>NTV</p>
+
+</div><div class="channel" data-url="tgn.bozztv.com/dvrfl05/gin-ntvtv/tracks-v1a1/mono.m3u8">
+<img src="https://i.ibb.co/9c7MvWX/ntv.png" alt="NTV">
+<p>NTV</p>
+
+</div><div class="channel" data-url="bloomberght-live.daioncdn.net/bloomberght/bloomberght.m3u8  ">
+<img src="https://i.ibb.co/HXKrJRC/blght22.png " alt="BLOOMBERG HT">
+<p>BLOOMBERG HT</p>
+
+</div><div class="channel" data-url="ensonhaber-live.ercdn.net/bloomberght/bloomberght.m3u8  ">
+<img src="https://i.ibb.co/HXKrJRC/blght22.png " alt="BLOOMBERG HT">
+<p>BLOOMBERG HT</p>
+
+</div><div class="channel" data-url=" ekoturkdvr.blutv.com/blutv_ekoturk_dvr/live.m3u8 ">
+<img src="https://i.ibb.co/xS3zLQr/ekoturk.png " alt="EKO TÜRK">
+<p>EKO TÜRK</p>
+
+</div><div class="channel" data-url="new.cache-stream.workers.dev/stream/UCAGVKxpAKwXMWdmcHbrvcwQ/live.m3u8  ">
+<img src="https://i.ibb.co/xS3zLQr/ekoturk.png " alt="EKO TÜRK">
+<p>EKO TÜRK</p>
+
+</div><div class="channel" data-url="new.cache-stream.workers.dev/stream/UCzrGg6iyRDuUSnO0cQ5oLcA/live.m3u8  ">
+<img src="https://i.ibb.co/KwXzY6B/apara.png " alt="A PARA">
+<p>A PARA</p>
+
+</div><div class="channel" data-url="trn03.tulix.tv/gt-apara/index.m3u8  ">
+<img src="https://i.ibb.co/KwXzY6B/apara.png " alt="A PARA">
+<p>A PARA</p>
+
+</div><div class="channel" data-url="new.cache-stream.workers.dev/stream/s79FesczwK4/live.m3u8  ">
+<img src="https://i.ibb.co/GkNZYWd/tv100eko.png " alt="EKONOMI">
+<p>EKONOMI</p>
+
+</div><div class="channel" data-url="meclistv-live.ercdn.net/meclistv/meclistv.m3u8  ">
+<img src="https://i.ibb.co/BN9tk1q/tbmm22.png " alt="TBMM TV">
+<p>TBMM TV</p>
+
+</div><div class="channel" data-url="603c568fccdf5.streamlock.net/live/dhaweb1_C5efC/playlist.m3u8  ">
+<img src="https://i.ibb.co/K6BKFqY/dha.png " alt="AA">
+<p>AA</p>
+
+</div><div class="channel" data-url=" mtulqxgomrllive.mediatriple.net/mtulqxgomrllive/broadcast_59f9c0c785b88.smil/playlist.m3u8 ">
+<img src="https://i.ibb.co/jLd8Fcb/aa.png " alt="AA">
+<p>AA</p>
+
+</div><div class="channel" data-url="trthaber.blutv.com/blutv_trthaber_live/live.m3u8  ">
+<img src="https://i.ibb.co/Bt6frts/trthaber.png " alt="TRT HABER">
+<p>TRT HABER</p>
+
+</div><div class="channel" data-url=" tv.ensonhaber.com/trthaber/trthaber.m3u8 ">
+<img src="i.ibb.co/Bt6frts/trthaber.png " alt="TRT HABER">
+<p>TRT HABER</p>
+
+</div><div class="channel" data-url="ciner.daioncdn.net/haberturktv/haberturktv.m3u8?app=c98ab0b0-50cc-495b-bb37-778e91f5ff5b  ">
+<img src="https://i.ibb.co/wdwm0fn/haberturk.png " alt="HABER TÜRK">
+<p>HABER TÜRK</p>
+
+</div><div class="channel" data-url="haberturk.blutv.com/blutv_haberturk_live/live.m3u8  ">
+<img src="https://i.ibb.co/wdwm0fn/haberturk.png " alt="HABER TÜRK">
+<p>HABER TÜRK</p>
+
+</div><div class="channel" data-url="tv.ensonhaber.com/haberturk/haberturk.m3u8  ">
+<img src="https://i.ibb.co/wdwm0fn/haberturk.png " alt="HABER TÜRK">
+<p>HABER TÜRK</p>
+
+</div><div class="channel" data-url=" ensonhaber-live.ercdn.net/haberglobal/haberglobal.m3u8 ">
+<img src="https://i.ibb.co/k58p7P2/hglobal.png" alt="HABER GLOBAL ">
+<p>HABER GLOBAL </p>
+
+</div><div class="channel" data-url="tv.ensonhaber.com/haberglobal/haberglobal.m3u8  ">
+<img src="https://i.ibb.co/k58p7P2/hglobal.png " alt="HABER GLOBAL">
+<p>HABER GLOBAL</p>
+
+</div><div class="channel" data-url="new.cache-stream.workers.dev/stream/UCtc-a9ZUIg0_5HpsPxEO7Qg/live.m3u8  ">
+<img src="https://i.ibb.co/k58p7P2/hglobal.png " alt="HABER GLOBAL">
+<p>HABER GLOBAL</p>
+
+</div><div class="channel" data-url="dogus.daioncdn.net/ntv/ntv.m3u8?ce=3&&app=7c4bb802-0c41-409e-8cd2-799984995694  ">
+<img src="https://i.ibb.co/9c7MvWX/ntv.png " alt="NTV">
+<p>NTV</p>
+
+</div><div class="channel" data-url=" dygvideo.dygdigital.com/live/hls/puhuntvdai?m3u8 ">
+<img src="https://i.ibb.co/9c7MvWX/ntv.png " alt="NTV">
+<p>NTV</p>
+
+</div><div class="channel" data-url="ciner-live.daioncdn.net/bloomberght/bloomberght.m3u8  ">
+<img src="https://i.ibb.co/HXKrJRC/blght22.png " alt="BLOOMBERG HT">
+<p>BLOOMBERG HT</p>
+
+</div><div class="channel" data-url="bloomberght2.blutv.com/blutv_bloomberght2/live.m3u8  ">
+<img src="https://i.ibb.co/HXKrJRC/blght22.png " alt="BLOOMBERG HT">
+<p>BLOOMBERG HT</p>
+
+</div><div class="channel" data-url="tv.ensonhaber.com/bloomberght/bloomberght.m3u8  ">
+<img src="BLOOMBERG HT " alt="BLOOMBERG HT">
+<p>BLOOMBERG HT</p>
+
+</div><div class="channel" data-url="flashtv.blutv.com/blutv_flashtv/live.m3u8  ">
+<img src="https://i.ibb.co/F5FcvbZ/flash4ok.png " alt="FLASH HABER">
+<p>FLASH HABER</p>
+
+</div><div class="channel" data-url="stream.guventechnology.com:19360/flashtv/flashtv.m3u8  ">
+<img src="https://i.ibb.co/F5FcvbZ/flash4ok.png " alt="FLASH HABER">
+<p>FLASH HABER</p>
+
+</div><div class="channel" data-url="szctvdvr.blutv.com/blutv_szctv_dvr/live.m3u8  ">
+<img src="https://i.ibb.co/B40rjP3/szc1.png " alt="SÖZCÜ TV">
+<p>SÖZCÜ TV</p>
+
+</div><div class="channel" data-url="raw.githubusercontent.com/ipstreet312/freeiptv/master/ressources/dmotion/py/szctv/szctv.m3u8  ">
+<img src="https://i.ibb.co/B40rjP3/szc1.png " alt="SÖZCÜ TV">
+<p>SÖZCÜ TV</p>
+
+</div><div class="channel" data-url="krt.blutv.com/blutv_krt_live/live.m3u8  ">
+<img src="https://i.ibb.co/ZT2fQq3/krt.png " alt="KRT">
+<p>KRT</p>
+
+</div><div class="channel" data-url="new.cache-stream.workers.dev/stream/UCT1QJrOPtGWYyWkXry8uT4w/live.m3u8  ">
+<img src="https://i.ibb.co/ZT2fQq3/krt.png " alt="KRT">
+<p>KRT</p>
+
+</div><div class="channel" data-url="tele1.blutv.com/blutv_tele1_live/live.m3u8  ">
+<img src="https://i.ibb.co/4Mhmggc/tele1.png " alt="TELE 1">
+<p>TELE 1</p>
+
+</div><div class="channel" data-url="new.cache-stream.workers.dev/stream/UCoHnRpOS5rL62jTmSDO5Npw/live.m3u8  ">
+<img src="https://i.ibb.co/4Mhmggc/tele1.png " alt="TELE 1">
+<p>TELE 1</p>
+
+</div><div class="channel" data-url="halktv-live.daioncdn.net/halktv/halktv.m3u8  ">
+<img src="https://i.ibb.co/BtYMK4q/halk21a.png " alt="HALK TV">
+<p>HALK TV</p>
+
+</div><div class="channel" data-url=" halktvdvr.blutv.com/blutv_halktv2_dvr/live.m3u8 ">
+<img src="https://i.ibb.co/BtYMK4q/halk21a.png " alt="HALK TV">
+<p>HALK TV</p>
+
+</div><div class="channel" data-url="ulusalkanal.blutv.com/blutv_ulusalkanal/blutv_ulusalkanal.smil/playlist.m3u8  ">
+<img src="https://i.ibb.co/tXdf2YF/ulusal22.png " alt="ULUSAL KANAL">
+<p>ULUSAL KANAL</p>
+
+</div><div class="channel" data-url="stream.guventechnology.com:19360/ulusaltv/ulusaltv.m3u8  ">
+<img src="https://i.ibb.co/tXdf2YF/ulusal22.png " alt="ULUSAL KANAL">
+<p>ULUSAL KANAL</p>
+
+</div><div class="channel" data-url=" new.cache-stream.workers.dev/stream/UCP-0oW3M7DpjmPDutckOjiA/live.m3u8 ">
+<img src="https://i.ibb.co/6m9Pb3t/tv5tr1.png " alt="TV5">
+<p>TV5</p>
+
+</div><div class="channel" data-url="ythls.onrender.com/channel/UCP-0oW3M7DpjmPDutckOjiA.m3u8  ">
+<img src="https://i.ibb.co/6m9Pb3t/tv5tr1.png " alt="TV5">
+<p>TV5</p>
+
+</div><div class="channel" data-url=" ensonhaber-live.ercdn.net/benguturk/benguturk.m3u8 ">
+<img src="https://i.ibb.co/0MHPk8y/benguturk.png " alt="BENGÜ TÜRK">
+<p>BENGÜ TÜRK</p>
+
+</div><div class="channel" data-url="new.cache-stream.workers.dev/stream/UChNgvcVZ_ggDdZ0zCcuuzFw/live.m3u8  ">
+<img src="https://i.ibb.co/0MHPk8y/benguturk.png " alt="BENGÜ TÜRK">
+<p>BENGÜ TÜRK</p>
+
+</div><div class="channel" data-url="b01c02nl.mediatriple.net/videoonlylive/mtsxxkzwwuqtglive/broadcast_5fe4598be8e5d.smil/playlist.m3u8  ">
+<img src="https://i.ibb.co/vJJzR8G/tgrthab22.png " alt="TGRT HABER">
+<p>TGRT HABER</p>
+
+
+
+
+
+
+
+
+
+</div></div></section><!-- Footer --><footer><p>&copy; 2025 IPTV Turis Tv App. All rights reserved.</p>
 </footer></div><!-- Link to JavaScript --><script src="app.js"></script></body></html>
 <!-- partial -->
   <script  src="./script.js"></script>
