--- a/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/index.html
@@ -11,10 +11,27 @@
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>IPTV App</title><link rel="stylesheet" href="styles.css"></head><body><!-- Splash Screen -->
-<div id="splash-screen"><h1>Welcome to IPTV</h1></div><!-- Main App Layout -->
+<div id="splash-screen"><h1>Turis Tv IPTV</h1></div><!-- Main App Layout -->
 <div id="app-container" style="display: none;"><!-- Header --><header>
 <h1>IPTV App</h1></header><!-- Navigation Bar --><nav><ul><li>
-<a href="#">Live BEIN TV</a></li><li><a href="#"></a></li></ul>
+<a href="#">OpPlayer Indir</a>
+
+
+</li>
+<li><a href="#"></a></li></ul>
+
+
+
+<nav><ul><li>
+<a href="#">OpPlayer Indir</a>
+<a href="#">OpPlayer Indir</a>
+<a href="#">OpPlayer Indir</a>
+<a href="#">OpPlayer Indir</a>
+<a href="#">OpPlayer Indir</a>
+
+
+
+
 </nav><!-- Content Area --><section id="content"><!-- Channel List -->
 <div id="channel-list"><div class="channel" data-url="yayin2.canlitv.fun/livetv/tv8.stream/master.m3u8">
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 1"><p>beIN Sports 1</p>
