--- a/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/Ulusal.html
+++ b/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/Ulusal.html
@@ -23,12 +23,12 @@
 
 
 <nav><ul><li>
-<a href="#">Ulusal</a>
-<a href="#">Haber</a>
-<a href="#">Belgesel</a>
-<a href="#">Muzik</a>
-<a href="#">Spor</a>
-<a href="#">Çocuk</a>
+<a href="Ulusal.html">Ulusal</a>
+<a href="index.html">Haber</a>
+<a href="index.html">Belgesel</a>
+<a href="Muzik.html">Muzik</a>
+<a href="index;html">Spor</a>
+<a href="index.html">Çocuk</a>
 
 
 
