--- a/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/index.html
@@ -10,56 +10,67 @@
 <!-- partial:index.partial.html -->
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>IPTV App</title><link rel="stylesheet" href="styles.css"></head><body><!-- Splash Screen -->
+<link rel="stylesheet" href="styles.css"></head><body><!-- Splash Screen -->
 <div id="splash-screen"><h1>Turis Tv IPTV</h1></div><!-- Main App Layout -->
 <div id="app-container" style="display: none;"><!-- Header --><header>
-<h1>IPTV App</h1></header><!-- Navigation Bar --><nav><ul><li>
-<a href="#">OpPlayer Indir</a>
+</header><!-- Navigation Bar --><nav><ul><li>
+<a href="03-muzik.html">Muzik</a></li>
+<li><a href="#"></a></li>
+
+<li>
+<a href="#">ULusal</a></li>
+<li><a href="#"></a></li>
+<li>
+<a href="#">Spor</a></li>
+<li><a href="#"></a></li>
+<li>
+<a href="02-Belgesel.html">Belgesel</a></li>
+<li><a href="#"></a></li>
+<li>
+<a href="#">Cocuk</a></li>
+<li><a href="#"></a></li>
 
 
-</li>
-<li><a href="#"></a></li></ul>
-
-
-
-<nav><ul><li>
-<a href="Ulusal.html">Ulusal</a>
-<a href="#">Haber</a>
-<a href="#">Belgesel</a>
-<a href="#">Muzik</a>
-<a href="#">Spor</a>
-<a href="#">Çocuk</a>
 
 
 
 
+</ul>
 </nav><!-- Content Area --><section id="content"><!-- Channel List -->
-</div><div class="channel" data-url="tgn.bozztv.com/trn03/gt-atv-tv/tracks-v1a1/mono.m3u8">
-<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="ATV>
-<p>beIN Sports 2</p></div><div class="channel" data-url="hw1.jemtv.com/app/akittv/playlist.m3u8">
-<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 3"><p>AKIT</p>
-</div><div class="channel" data-url="hw1.jemtv.com/app/FoxTurkey/playlist.m3u8">
-<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="FOX Tv">
-<p>beIN Sports 4</p></div><div class="channel" data-url="hw1.jemtv.com/app/Kanal7/playlist.m3u8">
-<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 5"><p>KANAL 7</p>
-</div><div class="channel" data-url="trn03.tulix.tv/gt-kanald/index.m3u8">
-<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="KANAL D">
-<p>beIN Sports 6</p></div><div class="channel" data-url="hw1.jemtv.com/app/ShowTV/playlist.m3u8">
-<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="SHOW TV">
-<p>beIN Sports 7</p></div><div class="channel" data-url="hw1.jemtv.com/app/StarTV/playlist.m3u8">
-<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 8"><p>STAR TV </p>
-</div><div class="channel" data-url="hw1.jemtv.com/app/trt1/playlist.m3u8">
-<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 9"><p>TRT 1</p>
+<div id="channel-list"><div class="channel" data-url="http://hw1.jemtv.com/app/akittv/playlist.m3u8">
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 1"><p>beIN Sports 1</p>
+</div><div class="channel" data-url="http://hw1.jemtv.com/app/akittv/playlist.m3u8">
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 2">
+<p>beIN Sports 2</p></div><div class="channel" data-url="http://hw1.jemtv.com/app/akittv/playlist.m3u8">
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 3"><p>beIN Sports 3</p>
+</div><div class="channel" data-url="http://hw1.jemtv.com/app/akittv/playlist.m3u8">
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 4">
+<p>beIN Sports 4</p></div><div class="channel" data-url="http://hw1.jemtv.com/app/akittv/playlist.m3u8">
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 5"><p>beIN Sports 5</p>
+</div><div class="channel" data-url="http://hw1.jemtv.com/app/akittv/playlist.m3u8">
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 6">
+<p>beIN Sports 6</p></div><div class="channel" data-url="http://hw1.jemtv.com/app/akittv/playlist.m3u8">
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 7">
+<p>beIN Sports 7</p></div><div class="channel" data-url="http://hw1.jemtv.com/app/akittv/playlist.m3u8">
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 8"><p>beIN Sports 8</p>
+</div><div class="channel" data-url="http://173.212.193.243:8080/mo3adb356Ds/mo3adb356Ds/894">
+<img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Bein_sport_logo.png" alt="beIN Sports 9"><p>beIN Sports 9</p>
 
 
-
-
-</div><div class="channel" data-url="tv-trthaber.medya.trt.com.tr/master.m3u8">
-<img src="https://i.ibb.co/Bt6frts/trthaber.png" alt="|TR|🇹🇷 HABER">
-<p>|TR|🇹🇷 HABER</p>
 
 </div><div class="channel" data-url="ensonhaber-live.ercdn.net/trthaber/trthaber.m3u8">
 <img src="https://i.ibb.co/Bt6frts/trthaber.png" alt="TRT HABER">
+
+
+
+
+
+
+
+
+
+
+
 <p>TRT HABER</p>
 
 </div><div class="channel" data-url="ciner-live.daioncdn.net/haberturktv/haberturktv.m3u8">
@@ -601,16 +612,14 @@
 
 
 
-
-
-
-
-
-
 </div></div></section><!-- Footer --><footer><p>&copy; 2025 IPTV Turis Tv App. All rights reserved.</p>
 </footer></div><!-- Link to JavaScript --><script src="app.js"></script></body></html>
 <!-- partial -->
   <script  src="./script.js"></script>
+
+
+
+
 
 </body>
 </html>
