--- a/Ana-Dosya/20-Test-Sayfasi/9-Test/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/9-Test/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<a href="https://www.mythrillfiction.com/the-dark-rider" alt="Mythrill" target="_blank">
+<a href="https://turis-tv.github.io/Turis-2025/Ana-Dosya/Menu.html" alt="Mythrill" target="_blank">
   <div class="card">
     <div class="wrapper">
       <img src="https://ggayane.github.io/css-experiments/cards/dark_rider-cover.jpg" class="cover-image" />
@@ -18,7 +18,7 @@
   </div>
 </a>
 
-<a href="https://www.mythrillfiction.com/force-mage" alt="Mythrill" target="_blank">
+<a href="https://turis-tv.github.io/Turis-2025/Ana-Dosya/Menu.html" target="_blank">
   <div class="card">
     <div class="wrapper">
       <img src="https://ggayane.github.io/css-experiments/cards/force_mage-cover.jpg" class="cover-image" />
@@ -28,7 +28,7 @@
   </div>
 </a>
 
-<a href="https://www.mythrillfiction.com/force-mage" alt="Mythrill" target="_blank">
+<a href="https://turis-tv.github.io/Turis-2025/Ana-Dosya/Menu.html" alt="Mythrill" target="_blank">
   <div class="card">
     <div class="wrapper">
       <img src="https://ggayane.github.io/css-experiments/cards/force_mage-cover.jpg" class="cover-image" />
@@ -38,7 +38,7 @@
   </div>
 </a>
 
-<a href="https://www.mythrillfiction.com/the-dark-rider" alt="Mythrill" target="_blank">
+<a href="https://turis-tv.github.io/Turis-2025/Ana-Dosya/Menu.html" alt="Mythrill" target="_blank">
   <div class="card">
     <div class="wrapper">
       <img src="https://ggayane.github.io/css-experiments/cards/dark_rider-cover.jpg" class="cover-image" />
