--- a/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
+++ b/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
@@ -335,7 +335,7 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 <h2>9-Test</h2>
 </button>
 
-<button onclick="window.open('10.00_Test_Iptv/index.html')">
+<button onclick="window.open('10.00_Test_Iptv/acilan.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
 <h2>10-Test</h2>
 </button>
