--- a/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/1-Ulusal.htm
+++ b/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/1-Ulusal.htm
@@ -25,10 +25,10 @@
 
 
 
-<div id="channel-list"><div class="channel" data-url="yayin2.canlitv.fun/livetv/atv.stream/master.m3u8">
+<div id="channel-list"><div class="channel" data-url="hw1.jemtv.com/app/ATVHD/playlist.m3u8">
 <img src="https://seeklogo.com/images/A/atv-logo-35C825BDBB-seeklogo.com.png" alt="Atv"><p>Atv | a 🇹🇷</p>
 
-</div><div class="channel" data-url="50.7.144.122:1935/livetv/atv.stream/sec-f5-v1-a1.m3u8">
+</div><div class="channel" data-url="tgn.bozztv.com/trn03/gt-atv-tv/tracks-v1a1/mono.m3u8">
 <img src="https://seeklogo.com/images/A/atv-logo-35C825BDBB-seeklogo.com.png" alt="Atv"><p>Atv | b 🇹🇷 </p>
 
 </div><div class="channel" data-url="tgn.bozztv.com/dvrfl05/gin-atvavrupa/tracks-v1a1/mono.m3u8">
