--- a/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/1-Ulusal.htm
+++ b/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/1-Ulusal.htm
@@ -14,8 +14,8 @@
 <div id="splash-screen"><h1>Ulusal</h1></div><!-- Main App Layout -->
 <div id="app-container" style="display: none;"><!-- Header --><header>
 </header><!-- Navigation Bar --><nav><ul><li>
-<a href="https://dosya.co/07neyf5in55u/OPlayer_base.apk.html">OpLayer Indir</a>
-<a href="https://dosya.co/qaf72prwfm60/VLC_base.apk.html">Vlc Indir</a></li><li><a href="#"></a></li></ul>
+<a href="https://play.google.com/store/apps/details?id=com.olimsoft.android.oplayer.pro">OpLayer Indir</a>
+<li></a></li></ul>
 </nav><!-- Content Area --><section id="content"><!-- Channel List -->
 
 
