--- a/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/2-Haber.htm
+++ b/Ana-Dosya/20-Test-Sayfasi/10.00_Test_Iptv/2-Haber.htm
@@ -14,13 +14,14 @@
 <div id="splash-screen"><h1>Haberler</h1></div><!-- Main App Layout -->
 <div id="app-container" style="display: none;"><!-- Header --><header>
 </header><!-- Navigation Bar --><nav><ul><li>
-<a href="https://dosya.co/07neyf5in55u/OPlayer_base.apk.html">OpLayer Indir</a><a href="#">
-<a href="https://dosya.co/qaf72prwfm60/VLC_base.apk.html">Vlc Indir</a></li><li><a href="#"></a></li></ul>
+<a href="https://play.google.com/store/apps/details?id=com.olimsoft.android.oplayer.pro">OpLayer Indir</a>
+<li></a></li></ul>
 </nav><!-- Content Area --><section id="content"><!-- Channel List -->
 
 
 
-<div id="channel-list"><div class="channel" data-url="hw1.jemtv.com/app/cnnturk/playlist.m3u8">
+
+<div id="channel-list"><div class="channel" data-url="116.202.238.88/CNNTURK_TR/index.m3u8">
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWRjQpazuGWaFtKTt4hu-N1BJkdtH3sl6jEQ&usqp=CAU  " alt="Cnn Türk"><p>Cnn Türk | a 🇹🇷</p>
 
 </div><div class="channel" data-url="tgn.bozztv.com/dvrfl05/gin-cnnturk/tracks-v1a1/mono.m3u8">
